tests/src/snapshots/fe_compiler_tests__compile_errors__bad_map3.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `map` expects 2 arguments, but 0 were provided
  ┌─ [snippet]:3:6
  │
3 │   x: map<>
  │      ^^^-- supplied 0 arguments
  │      │   
  │      expects 2 arguments


